Blocks and trees